Monospace Font & New Title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<title></title>
+<title>Small Caps</title>
 
 <textarea id='text_input' oninput='update_output()'></textarea>
 <textarea id='text_output' readonly></textarea>
@@ -14,5 +14,6 @@
         resize: none;
         width: 49.89%;
         height: 99.62%;
+        font-family: monospace;
     }
 </style>
